--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
     "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
