--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,12 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
-    "pytest>=8.4.1",
-    "pytest-cov>=6.2.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
 ]
