--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
