--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 # Environment Variables
 
+# Rename this file to ".env" and update the values below with your own environment variables.
+
 # Backend
 BACKEND_CORS_ORIGINS='http://localhost,http://localhost:5173,https://localhost,https://localhost:5173'
 
