--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
